add margin for body

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -5,6 +5,7 @@
   box-sizing: border-box;
 }
 body {
+  margin: auto;
   width: 1440px;
   padding: 115px 132px;
   font-family: 'Montserrat', sans-serif;
