--- a/styles/cards.scss
+++ b/styles/cards.scss
@@ -1,8 +1,8 @@
-.cards {
+.price-cards {
   display: flex;
 }
 
-.card {
+.price-card {
   position: relative;
   width: 380px;
   height: 770px;
@@ -37,7 +37,7 @@
     }
   }
 
-  &__name {
+  &__title {
     margin: 0;
     font-weight: bold;
     font-size: 35px;
@@ -68,7 +68,7 @@
       background-color: $color-orange;
     }
   }
-  &__descr {
+  &__description {
     margin: auto;
     margin-top: 40px;
     width: 327px;
@@ -78,7 +78,7 @@
     line-height: 18px;
     text-align: center;
   }
-  &__list {
+  &__option-list {
     margin: 0;
     padding: 0;
     margin-top: 40px;
@@ -98,7 +98,7 @@
       }
     }
   }
-  &__button {
+  &__order-btn {
     display: block;
     width: 154px;
     height: 40px;
