--- a/styles/cards.scss
+++ b/styles/cards.scss
@@ -78,7 +78,7 @@
     line-height: 18px;
     text-align: center;
   }
-  &__option-list {
+  &__options-list {
     margin: 0;
     padding: 0;
     margin-top: 40px;
