--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,7 @@
   text-align: center;
 }
 .price-card__price {
+  margin: 0;
   margin-top: 33px;
   font-weight: bold;
   font-size: 55px;
@@ -99,6 +100,7 @@
   height: 40px;
   margin: auto;
   margin-top: 39px;
+  color: #ffffff;
   border: none;
   border-radius: 20px;
 }
