--- a/styles/cards.scss
+++ b/styles/cards.scss
@@ -53,6 +53,7 @@
     text-align: center;
   }
   &__price {
+    margin: 0;
     margin-top: 33px;
     font-weight: bold;
     font-size: 55px;
@@ -104,6 +105,7 @@
     height: 40px;
     margin: auto;
     margin-top: 39px;
+    color: $color-white;
     border: none;
     border-radius: 20px;
     &_green {
