--- a/styles/cards.scss
+++ b/styles/cards.scss
@@ -1,5 +1,9 @@
 .price-cards {
   display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  margin: auto;
 }
 
 .price-card {
